--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "minimum-stability": "dev",
     "autoload": {
     "psr-4": {
-      "my-packages\\test-package-01\\": "src/"
+      "MyPackages\\TestPackageOne\\": "src/"
     }
   }
 }
